# omni-context

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.bctx/: .gitignore  config.json
.bctx/templates/_default/: context.md
.bctx/templates/chore/: context.md
.bctx/templates/feature/: context.md
.bctx/templates/fix/: context.md
.changelog/: +auto-base-branch.feature.md  +auto-restore-archived-contexts.feature.md  +base-command.feature.md  +cli-restructure.misc.md  +completion-per-binary.feature.md  +config-cleanup.misc.md  +module-reorganization.misc.md  +per-branch-base.feature.md  +prune-exclude-remote-branches.bugfix.md  +prune-interactive.feature.md  +prune-reorder.bugfix.md  +prune-ux-improvements.misc.md  +remove-on-switch.misc.md  +shell-completion.feature.md  +status-branches-table.feature.md  +symlink-rename.misc.md  +sync-command.feature.md  +template-improvements.misc.md  +template-preserve-files.bugfix.md  +templates-config.misc.md  +windows-compat.bugfix.md
.claude/commands/: check-completion-sync.md
.github/workflows/: callable-ci.yml  check-completion.yml  prs.yml  push-to-main.yml  release.yml  update-docs.yml
docs/: architecture.md  index.md  overview.md  rules.md  testing.md
docs/features/: branch-context-management.md  context-metadata.md  repository-status.md  shell-integration.md  uninstall-management.md
docs/guides/: create-release.md
docs/repo/: cicd.md  local-setup.md  structure.md  tooling.md
src/branchctx/: branch_base.py  cli.py  cmd_registry.py  config.py  constants.py  context_tags.py  git.py  hooks.py  meta.py  registry.py  sync.py  template_vars.py
src/branchctx/assets/: __init__.py
src/branchctx/assets/init/: config.json  hook_post_checkout.sh  hook_post_commit.sh
src/branchctx/assets/init/templates/_default/: context.md
src/branchctx/assets/init/templates/chore/: context.md
src/branchctx/assets/init/templates/feature/: context.md
src/branchctx/assets/init/templates/fix/: context.md
src/branchctx/commands/: __init__.py  _branches.py  base.py  branches.py  completion.py  doctor.py  init.py  on_checkout.py  on_commit.py  prune.py  status.py  sync.py  template.py  uninstall.py
src/branchctx/core/: context_tags.py  hooks.py  sync.py
src/branchctx/data/: branch_base.py  config.py  meta.py
src/branchctx/utils/: color.py  git.py  prompt.py  template.py
src/omnicontext/: __init__.py  assets.py  cli.py  config.py  constants.py  git.py  hooks.py  registry.py  sync.py
src/omnicontext/assets/: __init__.py  default_config.json  notification.oga
src/omnicontext/assets/init/: config.json
src/omnicontext/assets/init/templates/_default/: context.md
src/omnicontext/assets/init/templates/feature/: context.md
src/omnicontext/commands/: __init__.py  branches.py  completion.py  doctor.py  init.py  install.py  on_checkout.py  reset.py  status.py  sync.py  uninstall.py
tests/: test_config.py  test_e2e.py  test_hooks.py  test_sync.py
tests/e2e/: test_context_tags_e2e.py  test_e2e.py  test_meta_e2e.py
tests/integration/: test_branches_cmd.py  test_completion_cmd.py  test_config.py  test_context_tags.py  test_git.py  test_hooks.py  test_init.py  test_meta.py  test_status_cmd.py  test_sync.py  test_template_vars.py
