[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnicontext"
version = "0.1.0"
description = "Git branch context manager - install post-checkout hooks to sync context across branches"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "lucasvtiradentes" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/lucasvtiradentes/omni-context"
Repository = "https://github.com/lucasvtiradentes/omni-context"
Issues = "https://github.com/lucasvtiradentes/omni-context/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.9", "towncrier>=23", "bump2version>=1"]

[project.scripts]
omnicontext = "omnicontext.cli:main"
oc = "omnicontext.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/omnicontext"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build]
include = [
  "src/omnicontext/**/*.py",
  "src/omnicontext/assets/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.towncrier]
directory = ".changelog"
filename = "CHANGELOG.md"
title_format = "## {version} ({project_date})"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = true
