[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "branch-ctx"
version = "0.2.2"
description = "Git branch context manager - sync context folders across branches automatically"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "lucasvtiradentes" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/lucasvtiradentes/branch-context"
Repository = "https://github.com/lucasvtiradentes/branch-context"
Issues = "https://github.com/lucasvtiradentes/branch-context/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.9", "towncrier>=23", "bump2version>=1", "pre-commit>=3"]

[project.scripts]
branch-ctx = "branchctx.cli:main"
bctx = "branchctx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/branchctx"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build]
include = [
  "src/branchctx/**/*.py",
  "src/branchctx/assets/*",
  "src/branchctx/assets/**/*",
  "src/branchctx/py.typed",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.towncrier]
directory = ".changelog"
filename = "CHANGELOG.md"
title_format = "## {version} ({project_date})"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = true
